tests/snapshots/e2e__feature_tests__system_node__Zsh.snap
---
source: tests/e2e.rs
expression: "&source.trim()"
---
set -e
eval "$(fnm env)"
fnm install 10
fnm use 10
fnm use system
if [ "$(node -v)" != "custom node" ]; then
    echo 'Expected Node version to be "custom node", Got: '"$(node -v)"
    exit 1
fi
